--- a/app/src/main/res/layouts/rent/layout/rental_room_details.xml
+++ b/app/src/main/res/layouts/rent/layout/rental_room_details.xml
@@ -91,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:clickable="false"
-                android:minWidth="@dimen/pwdItemWidth" />
+                android:minWidth="150dp" />
 
             <Button
                 android:id="@+id/rental_editRoom_add"
