--- a/app/src/main/res/layouts/password/layout/password_manage_item_details.xml
+++ b/app/src/main/res/layouts/password/layout/password_manage_item_details.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:orientation="vertical"
-        tools:context=".page.PasswordManageItemDetailsFragment">
+        tools:context=".fragment.PasswordManageItemDetailsFragment">
 
         <TextView
             style="@style/pwdShowItemTxtStyle"
