--- a/app/src/main/res/layouts/dialog/layout/add_room_dialog.xml
+++ b/app/src/main/res/layouts/dialog/layout/add_room_dialog.xml
@@ -26,6 +26,7 @@
 
     <EditText
         android:id="@+id/rental_addRoom_houseNumber"
+        android:inputType="number"
         style="@style/rental_add_edit"
         android:gravity="center_vertical" />
 
@@ -36,6 +37,7 @@
 
     <EditText
         android:id="@+id/rental_addRoom_area"
+        android:inputType="number"
         style="@style/rental_add_edit" />
 
 
@@ -54,6 +56,7 @@
 
     <EditText
         android:id="@+id/rental_addRoom_propertyPrice"
+        android:inputType="number"
         style="@style/rental_add_edit" />
 
     <LinearLayout
