--- a/app/src/main/res/layouts/dialog/layout/main_listview.xml
+++ b/app/src/main/res/layouts/dialog/layout/main_listview.xml
@@ -14,7 +14,7 @@
             android:layout_height="match_parent"
             android:divider="#00000000"
             android:dividerHeight="5dp"
-            android:layout_margin="@dimen/rental_main_gridview_margin"
+            android:layout_margin="@dimen/rental_main_gridview_margin_6"
              />
 
         <ImageButton
@@ -25,4 +25,7 @@
             android:layout_centerHorizontal="true"
             android:layout_margin="10dp"
             android:src="@drawable/ic_launcher_foreground" />
+<!--        <ExpandableListView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"/>-->
 </RelativeLayout>
