--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme2" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -55,4 +55,25 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
     </style>
+
+    <style name="rental_textView_context">
+        <item name="android:layout_marginEnd">3dp</item>
+        <item name="android:minWidth">80dp</item>
+        <item name="android:textSize">@dimen/rental_lable_textSize</item>
+    </style>
+
+    <style name="rental_textView_Lable">
+        <item name="android:textSize">@dimen/rental_lable_textSize</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+
+    <style name="rental_add_edit">
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:textSize">@dimen/rental_lable_textSize</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_gravity">fill_horizontal</item>
+    </style>
+
+    <dimen name="rental_lable_textSize">18dp</dimen>
 </resources>
