--- a/app/src/main/res/layouts/dialog/layout/add_room_dialog.xml
+++ b/app/src/main/res/layouts/dialog/layout/add_room_dialog.xml
@@ -17,7 +17,8 @@
     <AutoCompleteTextView
         android:id="@+id/rental_addRoom_communityName"
         style="@style/rental_add_edit"
-        android:completionThreshold="0" />
+        android:layout_columnWeight="1"
+        android:completionThreshold="1" />
 
 
     <TextView
@@ -26,8 +27,7 @@
 
     <EditText
         android:id="@+id/rental_addRoom_houseNumber"
-        android:inputType="number"
-        style="@style/rental_add_edit"
+        style="@style/rental_add_edit" android:layout_columnWeight="1"
         android:gravity="center_vertical" />
 
 
@@ -37,7 +37,7 @@
 
     <EditText
         android:id="@+id/rental_addRoom_area"
-        android:inputType="number"
+        android:inputType="numberDecimal" android:layout_columnWeight="1"
         style="@style/rental_add_edit" />
 
 
@@ -47,7 +47,7 @@
         android:text="@string/rental_meterNumber_cn" />
 
     <EditText
-        android:id="@+id/rental_addRoom_meterNumber"
+        android:id="@+id/rental_addRoom_meterNumber" android:layout_columnWeight="1"
         style="@style/rental_add_edit" />
 
     <TextView
@@ -56,7 +56,8 @@
 
     <EditText
         android:id="@+id/rental_addRoom_propertyPrice"
-        android:inputType="number"
+        android:inputType="numberDecimal"
+        android:layout_columnWeight="1"
         style="@style/rental_add_edit" />
 
     <LinearLayout
