--- a/app/src/main/res/layouts/dialog/layout/main_listview.xml
+++ b/app/src/main/res/layouts/dialog/layout/main_listview.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main_viewId"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/grayWhite"
     tools:context=".page.PasswordManageActivity">
 
 
