--- a/app/src/main/res/layouts/rent/layout/rental_room_total_item.xml
+++ b/app/src/main/res/layouts/rent/layout/rental_room_total_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/rental_main_gridview_margin_6"
-    android:background="@color/grayWhite">
+    android:background="@android:color/white">
 
     <TextView
         android:id="@+id/rental_main_CommunityName"
